fix sponsors img on mobile

--- a/static/css/style-medium.css
+++ b/static/css/style-medium.css
@@ -130,3 +130,8 @@
 	#footer .icons {
 		text-align: center;
 	}
+
+	section#sponsorsimg img {
+		padding-left: 0;
+		padding-right: 0;
+	}
